Resurrect gl-stats.js (#765)
* Fix gl-stats.js

* add some minimal documentation for gl-stats.js

* remove obsolete top level await workaround, make sure browser gets closed on errors

* disalbe wrong eslint error

* remove unnecessary eslint-disable

* all imports at the beginning

* add npm script gl-stats

* avoid possible race between npm run gl-stats and running npm run watch-dev

--- a/package.json
+++ b/package.json
@@ -211,7 +211,8 @@
     "test-expressions": "node --experimental-specifier-resolution=node test/expression.test.js",
     "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
     "test-jest": "jest",
-    "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts"
+    "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
+    "gl-stats": "node bench/gl-stats.js"
   },
   "files": [
     "build/",
