--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
       "DOM.Iterable",
       "WebWorker"
     ],
-    "typeRoots": ["./src/types/packages-types", "node_modules/@types"],
-    "types": ["node", "jest", "geojson", "offscreencanvas", "vector-tile"]
+    "types": ["node", "jest", "geojson", "offscreencanvas"]
   },
   "include": [
     "src/**/*.ts",
