--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "browserify": "^17.0.0",
     "canvas": "^2.9.0",
     "chokidar": "^3.0.2",
+    "chromedriver": "^97.0.0",
     "cssnano": "^5.0.8",
     "d3": "^4.12.0",
     "diff": "^4.0.1",
