--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maplibre-gl",
   "description": "BSD licensed community fork of mapbox-gl, a WebGL interactive maps library",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "main": "dist/maplibre-gl.js",
   "style": "dist/maplibre-gl.css",
   "license": "BSD-3-Clause",
@@ -218,8 +218,7 @@
   },
   "files": [
     "build/",
-    "dist/maplibre-gl*",
-    "dist/style-spec/",
+    "dist/*",
     "src/"
   ]
 }
