--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "@mapbox/mapbox-gl-rtl-text": "^0.2.1",
     "@mapbox/mvt-fixtures": "^3.6.0",
     "@octokit/rest": "^18.10.0",
-    "@rollup/plugin-commonjs": "^21.0.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/babel__core": "^7.1.12",
@@ -99,7 +100,7 @@
     "cssnano": "^5.0.8",
     "d3": "^4.12.0",
     "diff": "^4.0.1",
-    "documentation": "~12.1.1",
+    "documentation": "^12.3.0",
     "dts-bundle-generator": "^6.0.0",
     "ejs": "^3.1.6",
     "eslint": "^7.32.0",
@@ -146,10 +147,6 @@
     "replace-in-file": "^6.2.0",
     "request": "^2.88.0",
     "rollup": "^2.56.3",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
@@ -169,7 +166,7 @@
     "tape-filter": "^1.0.4",
     "testem": "^3.5.0",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "browser": {
