--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: npm ci
-      - run: npm run test-jest
+      - run: npm run test
 
   test_jest_ubuntu:
     strategy:
@@ -49,4 +49,4 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: npm ci
-      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-jest
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test
