Remove tap after jest migration

--- a/package.json
+++ b/package.json
@@ -113,9 +113,7 @@
     "is-builtin-module": "^3.0.0",
     "jest": "^27.2.4",
     "jest-canvas-mock": "^2.3.1",
-    "jest-codemods": "^0.25.0",
     "jest-raw-loader": "^1.0.1",
-    "jscodeshift": "^0.13.0",
     "jsdom": "^13.0.0",
     "json-stringify-pretty-compact": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
@@ -142,7 +140,6 @@
     "qrcode-terminal": "^0.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "replace-in-file": "^6.2.0",
     "request": "^2.88.0",
     "rollup": "^2.56.3",
     "rollup-plugin-sourcemaps": "^0.6.3",
@@ -158,7 +155,6 @@
     "st": "^3.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "tap": "~12.4.1",
     "tap-parser": "^10.0.1",
     "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
@@ -195,19 +191,15 @@
     "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src build debug/*.html bench",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
-    "test": "run-s lint lint-css lint-docs test-unit",
+    "lint-all": "run-s lint lint-css lint-docs",
     "test-suite": "run-s test-render test-query test-expressions",
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
-    "test-unit": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/unit",
-    "test-unit-file": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage ",
-    "test-build": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/build/**/*.test.js",
-    "test-browser": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/browser/**/*.test.js",
     "test-render": "node --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.js",
     "watch-query": "testem -f test/integration/testem.cjs",
     "test-query": "testem ci -f test/integration/testem.cjs -R xunit > test/integration/query-tests/test-results.xml",
     "test-expressions": "node --experimental-specifier-resolution=node test/expression.test.js",
-    "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
-    "test-jest": "jest",
+    "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-expressions test-query test-render",
+    "test": "jest",
     "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
     "gl-stats": "node bench/gl-stats.js"
   },
