--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -49,4 +49,4 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: npm ci
-      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-jest
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-unit
