--- a/.github/workflows/jest-coverage.yml
+++ b/.github/workflows/jest-coverage.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci
+      - run: npm run build-dev
       - uses: artiomtr/jest-coverage-report-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
