Run tests with SWC

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@swc/core": "^1.2.133",
+    "@swc/jest": "^0.2.17",
     "@types/babel__core": "^7.1.12",
     "@types/babelify": "^7.3.6",
     "@types/benchmark": "^2.1.0",
