Run in src folder

--- a/.github/workflows/jest-coverage.yml
+++ b/.github/workflows/jest-coverage.yml
@@ -13,3 +13,4 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           annotations: none
+          working-directory: src
