--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "npm-font-open-sans": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "pdf-merger-js": "^3.2.1",
     "pixelmatch": "^5.1.0",
     "pngjs": "^6.0.0",
     "postcss": "^8.3.11",
@@ -195,6 +196,7 @@
     "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
     "test-unit": "jest ./src",
     "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
+    "benchmark": "node bench/run-benchmarks.js",
     "gl-stats": "node bench/gl-stats.js"
   },
   "files": [
