--- a/.swcrc
+++ b/.swcrc
@@ -1,8 +1,7 @@
 {
   "jsc": {
     "parser": {
-      "syntax": "typescript",
-      "dynamicImport": true
+      "syntax": "typescript"
     }
   }
 }
