--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/minimist": "^1.2.2",
     "@types/murmurhash-js": "^1.0.3",
+    "@types/nise": "^1.4.0",
     "@types/node-notifier": "^8.0.2",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/pbf": "^3.0.2",
@@ -75,7 +76,6 @@
     "@types/rollup-plugin-json": "^3.0.3",
     "@types/selenium-webdriver": "^4.0.16",
     "@types/shuffle-seed": "^1.1.0",
-    "@types/sinon": "^10.0.9",
     "@types/supercluster": "^5.0.3",
     "@types/tape": "^4.13.2",
     "@types/window-or-global": "^1.0.4",
@@ -140,7 +140,6 @@
     "selenium-webdriver": "^4.1.1",
     "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
-    "sinon": "^12.0.1",
     "source-map-explorer": "^2.5.2",
     "st": "^3.0.0",
     "stylelint": "^14.3.0",
