--- a/package.json
+++ b/package.json
@@ -193,7 +193,8 @@
     "test-unit": "jest ./src",
     "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
     "benchmark": "node bench/run-benchmarks.js",
-    "gl-stats": "node bench/gl-stats.js"
+    "gl-stats": "node bench/gl-stats.js",
+    "postinstall": "npm run codegen"
   },
   "files": [
     "build/",
