Refactor shaders and typings generation (#928)

--- a/package.json
+++ b/package.json
@@ -134,7 +134,6 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "rollup-pluginutils": "^2.8.2",
     "rw": "^1.3.3",
     "selenium-webdriver": "^4.1.1",
     "semver": "^7.3.5",
@@ -155,14 +154,16 @@
     "./rollup/build/tsc/src/util/web_worker.js": "./build/web_worker_replacement.js"
   },
   "scripts": {
-    "build-post-ts": "node build/post-ts-build.js ./rollup/build/tsc/src/shaders",
-    "build-post-ts-min": "node build/post-ts-build.js ./rollup/build/tsc/src/shaders true",
-    "build-tsc": "tsc --outDir rollup/build/tsc && npm run build-post-ts",
-    "build-tsc-min": "tsc --outDir rollup/build/tsc && npm run build-post-ts-min",
+    "generate-shaders": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-shaders.ts",
+    "generate-struct-arrays": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts",
+    "generate-style-code": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts",
+    "generate-style-spec": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
+    "generate-typings": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-typings.ts",
+    "build-tsc": "tsc --outDir rollup/build/tsc",
     "build-dev": "npm run build-tsc && rollup -c --environment BUILD:dev",
     "watch-dev": "rollup -c --environment BUILD:dev --watch",
     "build-prod": "npm run build-tsc && rollup -c --environment BUILD:production",
-    "build-prod-min": "npm run build-tsc-min && rollup -c --environment BUILD:production,MINIFY:true",
+    "build-prod-min": "npm run build-tsc && rollup -c --environment BUILD:production,MINIFY:true",
     "build-csp": "rollup -c rollup.config.csp.js",
     "build-query-suite": "rollup -c test/integration/rollup.config.test.js",
     "build-css": "postcss -o dist/maplibre-gl.css src/css/maplibre-gl.css",
@@ -189,7 +190,7 @@
     "test-query": "testem ci -f test/integration/testem.cjs -R xunit > test/integration/query-tests/test-results.xml",
     "test-expressions": "node --experimental-specifier-resolution=node test/expression.test.js",
     "test-unit": "jest ./src",
-    "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
+    "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
     "benchmark": "node bench/run-benchmarks.js",
     "gl-stats": "node bench/gl-stats.js",
     "postinstall": "npm run codegen"
