Replace tsc/babel with swc

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@swc/cli": "^0.1.55",
+    "@swc/core": "^1.2.135",
+    "@swc/jest": "^0.2.17",
     "@types/babel__core": "^7.1.18",
     "@types/babelify": "^7.3.7",
     "@types/benchmark": "^2.1.1",
@@ -83,7 +86,6 @@
     "@typescript-eslint/parser": "^5.10.1",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^27.4.6",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
@@ -145,7 +147,6 @@
     "tape": "^5.5.0",
     "tape-filter": "^1.0.4",
     "testem": "^3.6.0",
-    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
@@ -158,7 +159,10 @@
     "generate-style-code": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts",
     "generate-style-spec": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
     "generate-typings": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-typings.ts",
-    "build-tsc": "tsc --outDir rollup/build/tsc",
+    "build-swc-src": "swc src -d rollup/build/tsc/src -D -s",
+    "build-swc-bench": "swc bench -d rollup/build/tsc/bench -D -s",
+    "build-tsc": "npm run build-swc-src && npm run build-swc-bench",
+    "build-tsc-old": "tsc --outDir rollup/build/tsc",
     "build-dev": "npm run build-tsc && rollup -c --environment BUILD:dev",
     "watch-dev": "rollup -c --environment BUILD:dev --watch",
     "build-prod": "npm run build-tsc && rollup -c --environment BUILD:production",
