--- a/.eslintrc
+++ b/.eslintrc
@@ -84,6 +84,8 @@
     "jsdoc/require-param-name": "warn",
     "jsdoc/require-returns": "warn",
     "jsdoc/require-returns-description": "warn",
+    "jsdoc/check-alignment": "error",
+    "jsdoc/check-line-alignment": "error",
 
     // Jest https://www.npmjs.com/package/eslint-plugin-jest
     "jest/no-commented-out-tests": "error",
