--- a/package.json
+++ b/package.json
@@ -191,7 +191,7 @@
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.ts",
     "watch-query": "testem -f test/integration/testem.cjs",
     "test-query": "testem ci -f test/integration/testem.cjs -R xunit > test/integration/query-tests/test-results.xml",
-    "test-expressions": "node --experimental-specifier-resolution=node test/expression.test.js",
+    "test-expressions": "node --loader ts-node/esm --experimental-specifier-resolution=node test/expression.test.ts",
     "test-unit": "jest ./src",
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
     "benchmark": "node bench/run-benchmarks.js",
