Move query tests to jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     "isolatedModules": true,
     //"importsNotUsedAsValues": "preserve",
     "jsx": "react",
-    "module": "ES6",
+    "module": "es2022",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": false,
-    "target": "ES6",
+    "target": "es2017",
     "lib": [
       "ESNext",
       "DOM",
