--- a/.github/workflows/test-query.yml
+++ b/.github/workflows/test-query.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  test_query:
+  test_expressions:
     name: ubuntu-latest
     runs-on: ubuntu-latest
     timeout-minutes: 20
@@ -19,12 +19,4 @@ jobs:
           architecture: x64
       - run: npm ci
       - run: npm run build-dev
-      - run: npm run test-query
-      - uses: actions/upload-artifact@v2
-        with:
-          path: ./test/integration/query-tests
-          name: querytests
-      - uses: actions/upload-artifact@v2
-        with:
-          path: ./test/integration/query-tests/index.html
-          name: querytests.html
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-query-jest
