--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     "generate-style-code": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts",
     "generate-style-spec": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts",
     "generate-typings": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-typings.ts",
+    "generate-query-test-fixtures": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-query-test-fixtures.ts",
     "build-swc-src": "swc src -d rollup/build/tsc/src -D -s",
     "build-swc-bench": "swc bench -d rollup/build/tsc/bench -D -s",
     "build-tsc": "npm run build-swc-src && npm run build-swc-bench",
@@ -191,6 +192,7 @@
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.ts",
     "watch-query": "testem -f test/integration/testem.cjs",
     "test-query": "testem ci -f test/integration/testem.cjs -R xunit > test/integration/query-tests/test-results.xml",
+    "test-query-jest": "npm run generate-query-test-fixtures && jest query-browser-jest",
     "test-expressions": "node --loader ts-node/esm --experimental-specifier-resolution=node test/expression.test.ts",
     "test-unit": "jest ./src",
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
