Move fixture gen from codegen to postinstall

--- a/package.json
+++ b/package.json
@@ -195,10 +195,10 @@
     "test-query-jest": "jest test/integration/lib/query-browser-jest.test.ts",
     "test-expressions": "node --loader ts-node/esm --experimental-specifier-resolution=node test/expression.test.ts",
     "test-unit": "jest ./src",
-    "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders && npm run generate-query-test-fixtures",
+    "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
     "benchmark": "node bench/run-benchmarks.js",
     "gl-stats": "node bench/gl-stats.js",
-    "postinstall": "npm run codegen"
+    "postinstall": "npm run codegen && npm run generate-query-test-fixtures"
   },
   "files": [
     "build/",
