--- a/package.json
+++ b/package.json
@@ -162,21 +162,18 @@
     "build-benchmarks": "npm run build-dev && rollup -c bench/rollup_config_benchmarks.js",
     "watch-benchmarks": "rollup -c bench/rollup_config_benchmarks.js --watch",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
-    "start": "run-p watch-css watch-query start-server",
+    "start": "run-p watch-css start-server",
     "start-debug": "run-p watch-css watch-dev start-server",
-    "start-tests": "run-p watch-css watch-query start-server",
     "start-bench": "run-p watch-css watch-benchmarks start-server",
     "lint": "eslint --cache --ext \".ts,.js,.html\" --ignore-path .gitignore src test build debug/*.html bench jest.config.js",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
     "test": "run-s lint lint-css lint-docs test-unit",
-    "test-suite": "run-s test-render test-query test-expressions",
-    "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
+    "test-suite": "run-s test-render test-expressions",
+    "test-suite-clean": "find test/integration/{render, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-build": "jest ./test/build",
     "test-browser": "jest ./test/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.ts",
-    "watch-query": "testem -f test/integration/testem.cjs",
-    "test-query": "testem ci -f test/integration/testem.cjs -R xunit > test/integration/query-tests/test-results.xml",
     "test-query-jest": "jest test/integration/lib/query-browser-jest.test.ts",
     "test-expressions": "node --loader ts-node/esm --experimental-specifier-resolution=node test/expression.test.ts",
     "test-unit": "jest ./src",
