--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vt-pbf": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.0",
     "@mapbox/gazetteer": "^5.1.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
     "@mapbox/mvt-fixtures": "^3.6.0",
@@ -45,7 +46,9 @@
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.135",
     "@swc/jest": "^0.2.17",
+    "@types/babel__core": "^7.1.18",
     "@types/benchmark": "^2.1.1",
+    "@types/browserify": "^12.0.37",
     "@types/cssnano": "^5.0.0",
     "@types/d3": "^7.1.0",
     "@types/diff": "^5.0.2",
@@ -80,6 +83,7 @@
     "@typescript-eslint/parser": "^5.10.1",
     "address": "^1.1.2",
     "benchmark": "^2.1.4",
+    "browserify": "^17.0.0",
     "canvas": "^2.9.0",
     "cssnano": "^5.0.16",
     "d3": "^7.3.0",
