Remove legacy test code (#948)
* Remove legacy test code

* remove scripts from package.json

* Remove "jest" from query test file name

* Reinstall browserify

* Remove babel

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "vt-pbf": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
     "@mapbox/gazetteer": "^5.1.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
     "@mapbox/mvt-fixtures": "^3.6.0",
@@ -46,8 +45,6 @@
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.135",
     "@swc/jest": "^0.2.17",
-    "@types/babel__core": "^7.1.18",
-    "@types/babelify": "^7.3.7",
     "@types/benchmark": "^2.1.1",
     "@types/browserify": "^12.0.37",
     "@types/cssnano": "^5.0.0",
@@ -67,7 +64,6 @@
     "@types/minimist": "^1.2.2",
     "@types/murmurhash-js": "^1.0.3",
     "@types/nise": "^1.4.0",
-    "@types/node-notifier": "^8.0.2",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/pbf": "^3.0.2",
     "@types/pixelmatch": "^5.2.4",
@@ -80,17 +76,13 @@
     "@types/selenium-webdriver": "^4.0.16",
     "@types/shuffle-seed": "^1.1.0",
     "@types/supercluster": "^5.0.3",
-    "@types/tape": "^4.13.2",
     "@types/window-or-global": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "address": "^1.1.2",
-    "babel-eslint": "^10.0.1",
-    "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
     "canvas": "^2.9.0",
-    "chokidar": "^3.5.3",
     "cssnano": "^5.0.16",
     "d3": "^7.3.0",
     "d3-queue": "^3.0.7",
@@ -116,7 +108,6 @@
     "minimist": "^1.2.5",
     "mock-geolocation": "^1.0.11",
     "nise": "^5.1.1",
-    "node-notifier": "^10.0.0",
     "node-plantuml": "^0.9.0",
     "npm-font-open-sans": "^1.1.0",
     "npm-run-all": "^4.1.5",
@@ -143,10 +134,6 @@
     "st": "^3.0.0",
     "stylelint": "^14.3.0",
     "stylelint-config-standard": "^24.0.0",
-    "tap-parser": "^10.1.0",
-    "tape": "^5.5.0",
-    "tape-filter": "^1.0.4",
-    "testem": "^3.6.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
@@ -177,22 +164,19 @@
     "build-benchmarks": "npm run build-dev && rollup -c bench/rollup_config_benchmarks.js",
     "watch-benchmarks": "rollup -c bench/rollup_config_benchmarks.js --watch",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
-    "start": "run-p watch-css watch-query start-server",
+    "start": "run-p watch-css start-server",
     "start-debug": "run-p watch-css watch-dev start-server",
-    "start-tests": "run-p watch-css watch-query start-server",
     "start-bench": "run-p watch-css watch-benchmarks start-server",
     "lint": "eslint --cache --ext \".ts,.js,.html\" --ignore-path .gitignore src test build debug/*.html bench jest.config.js",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
     "test": "run-s lint lint-css lint-docs test-unit",
-    "test-suite": "run-s test-render test-query test-expressions",
-    "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
+    "test-suite": "run-s test-render test-expressions",
+    "test-suite-clean": "find test/integration/{render, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-build": "jest ./test/build",
     "test-browser": "jest ./test/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.ts",
-    "watch-query": "testem -f test/integration/testem.cjs",
-    "test-query": "testem ci -f test/integration/testem.cjs -R xunit > test/integration/query-tests/test-results.xml",
-    "test-query-jest": "jest test/integration/lib/query-browser-jest.test.ts",
+    "test-query": "jest test/integration/lib/query.test.ts",
     "test-expressions": "node --loader ts-node/esm --experimental-specifier-resolution=node test/expression.test.ts",
     "test-unit": "jest ./src",
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
