--- a/package.json
+++ b/package.json
@@ -173,7 +173,9 @@
     "test-suite": "run-s test-render test-expressions",
     "test-suite-clean": "find test/integration/{render, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-build": "jest ./test/build",
-    "test-browser": "jest ./test/browser",
+    "test-symbol-shaping": "jest ./test/integration/symbol-shaping",
+    "test-style-spec": "jest ./test/integration/style-spec",
+    "test-browser": "jest ./test/integration/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.ts",
     "test-query": "jest test/integration/lib/query.test.ts",
     "test-expressions": "node --loader ts-node/esm --experimental-specifier-resolution=node test/expression.test.ts",
