--- a/package.json
+++ b/package.json
@@ -149,18 +149,18 @@
     "build-swc-bench": "swc bench -d rollup/build/tsc/bench -D -s",
     "build-tsc": "npm run build-swc-src && npm run build-swc-bench",
     "build-tsc-old": "tsc --outDir rollup/build/tsc",
-    "build-dev": "npm run build-tsc && rollup -c --environment BUILD:dev",
-    "watch-dev": "rollup -c --environment BUILD:dev --watch",
-    "build-prod": "npm run build-tsc && rollup -c --environment BUILD:production",
-    "build-prod-min": "npm run build-tsc && rollup -c --environment BUILD:production,MINIFY:true",
-    "build-csp": "rollup -c rollup.config.csp.js",
-    "build-query-suite": "rollup -c test/integration/rollup.config.test.js",
+    "build-dev": "npm run build-tsc && rollup --configPlugin @rollup/plugin-typescript -c --environment BUILD:dev",
+    "watch-dev": "rollup --configPlugin @rollup/plugin-typescript -c --environment BUILD:dev --watch",
+    "build-prod": "npm run build-tsc && rollup --configPlugin @rollup/plugin-typescript -c --environment BUILD:production",
+    "build-prod-min": "npm run build-tsc && rollup --configPlugin @rollup/plugin-typescript -c --environment BUILD:production,MINIFY:true",
+    "build-csp": "rollup --configPlugin @rollup/plugin-typescript -c rollup.config.csp.js",
+    "build-query-suite": "rollup --configPlugin @rollup/plugin-typescript -c test/integration/rollup.config.test.js",
     "build-css": "postcss -o dist/maplibre-gl.css src/css/maplibre-gl.css",
-    "build-style-spec": "npm run build-tsc && rollup -c rollup.config.style-spec.js && rollup -c rollup.config.style-spec.js --environment esm",
+    "build-style-spec": "npm run build-tsc && rollup --configPlugin @rollup/plugin-typescript -c rollup.config.style-spec.js && rollup --configPlugin @rollup/plugin-typescript -c rollup.config.style-spec.js --environment esm",
     "build-diagrams": "cd docs/diagrams; ls *.plantuml | xargs -I {} puml generate --svg {} -o {}.svg",
     "watch-css": "postcss --watch -o dist/maplibre-gl.css src/css/maplibre-gl.css",
-    "build-benchmarks": "npm run build-dev && rollup -c bench/rollup_config_benchmarks.js",
-    "watch-benchmarks": "rollup -c bench/rollup_config_benchmarks.js --watch",
+    "build-benchmarks": "npm run build-dev && rollup --configPlugin @rollup/plugin-typescript -c bench/rollup_config_benchmarks.js",
+    "watch-benchmarks": "rollup --configPlugin @rollup/plugin-typescript -c bench/rollup_config_benchmarks.js --watch",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
     "start": "run-p watch-css start-server",
     "start-debug": "run-p watch-css watch-dev start-server",
