--- a/package.json
+++ b/package.json
@@ -98,8 +98,9 @@
     "gl": "^5.0.0",
     "glob": "^7.2.0",
     "is-builtin-module": "^3.1.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
+    "jest-playwright-preset": "^1.7.0",
     "jsdom": "^19.0.0",
     "json-stringify-pretty-compact": "^3.0.0",
     "mapbox-gl-styles": "^2.0.2",
@@ -111,6 +112,7 @@
     "npm-run-all": "^4.1.5",
     "pdf-merger-js": "^3.3.2",
     "pixelmatch": "^5.2.1",
+    "playwright": "^1.18.1",
     "pngjs": "^6.0.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
@@ -173,7 +175,7 @@
     "test-style-spec": "jest ./test/integration/style-spec",
     "test-browser": "jest ./test/integration/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/integration/render/render.test.ts",
-    "test-query": "jest test/integration/query",
+    "test-query": "jest -c ./jest.config.e2e.js test/integration/query",
     "test-expression": "jest test/integration/expression",
     "test-unit": "jest ./src",
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
