Migrate query tests from puppeteer to playwright (#966)

--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "@types/pbf": "^3.0.2",
     "@types/pixelmatch": "^5.2.4",
     "@types/pngjs": "^6.0.1",
-    "@types/puppeteer": "^5.4.4",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/request": "^2.48.8",
@@ -98,8 +97,9 @@
     "gl": "^5.0.0",
     "glob": "^7.2.0",
     "is-builtin-module": "^3.1.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
+    "jest-playwright-preset": "^1.7.0",
     "jsdom": "^19.0.0",
     "json-stringify-pretty-compact": "^3.0.0",
     "mapbox-gl-styles": "^2.0.2",
@@ -111,12 +111,12 @@
     "npm-run-all": "^4.1.5",
     "pdf-merger-js": "^3.3.2",
     "pixelmatch": "^5.2.1",
+    "playwright": "^1.18.1",
     "pngjs": "^6.0.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^5.6.0",
-    "puppeteer": "^13.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "request": "^2.88.0",
@@ -173,7 +173,7 @@
     "test-style-spec": "jest ./test/integration/style-spec",
     "test-browser": "jest ./test/integration/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/integration/render/render.test.ts",
-    "test-query": "jest test/integration/query",
+    "test-query": "jest -c ./jest.config.e2e.js test/integration/query",
     "test-expression": "jest test/integration/expression",
     "test-unit": "jest ./src",
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
