--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "@types/react-dom": "^17.0.11",
     "@types/request": "^2.48.8",
     "@types/rollup-plugin-json": "^3.0.3",
-    "@types/selenium-webdriver": "^4.0.16",
     "@types/shuffle-seed": "^1.1.0",
     "@types/supercluster": "^5.0.3",
     "@types/window-or-global": "^1.0.4",
@@ -125,7 +124,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
     "rw": "^1.3.3",
-    "selenium-webdriver": "^4.1.1",
     "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
     "source-map-explorer": "^2.5.2",
@@ -167,7 +165,7 @@
     "test-build": "jest ./test/build",
     "test-symbol-shaping": "jest ./test/integration/symbol-shaping",
     "test-style-spec": "jest ./test/integration/style-spec",
-    "test-browser": "jest ./test/integration/browser",
+    "test-browser": "jest -c ./jest.config.e2e.js ./test/integration/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/integration/render/render.test.ts",
     "test-query": "jest -c ./jest.config.e2e.js test/integration/query",
     "test-expression": "jest test/integration/expression",
