--- a/package.json
+++ b/package.json
@@ -152,9 +152,10 @@
     "build-benchmarks": "npm run build-dev && rollup --configPlugin @rollup/plugin-typescript -c test/bench/rollup_config_benchmarks.ts",
     "watch-benchmarks": "rollup --configPlugin @rollup/plugin-typescript -c test/bench/rollup_config_benchmarks.ts --watch",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
+    "start-server-at-test": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html -d test",
     "start": "run-p watch-css start-server",
     "start-debug": "run-p watch-css watch-dev start-server",
-    "start-bench": "run-p watch-css watch-benchmarks start-server",
+    "start-bench": "run-p watch-css watch-benchmarks start-server-at-test",
     "lint": "eslint --cache --ext \".ts,.js,.html\" --ignore-path .gitignore src test build debug/*.html jest.config.js",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
